--- a/src/app/cropper-one/cropper-one.component.html
+++ b/src/app/cropper-one/cropper-one.component.html
@@ -12,8 +12,8 @@
   <div class="row">
     <div class="col-12 col-lg-6">
       裁切功能: <br />
-      <image-cropper [imageFile]="imageFile" format="jpeg" [resizeToWidth]="800" [maintainAspectRatio]="true" [aspectRatio]="16 / 9"
-        [imageQuality]="40" [containWithinAspectRatio]="true" (imageCropped)="imageCropped($event)">
+      <image-cropper [imageFile]="imageFile" format="jpeg" [resizeToWidth]="800" [aspectRatio]="16 / 9"
+        [imageQuality]="40" (imageCropped)="imageCropped($event)">
       </image-cropper>
     </div>
     <div class="col-12 col-lg-6">
