--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <button  type="button" class="btn btn-outline-primary" (click)="option1()"> 裁切元件一</button>
-  <button  type="button" class="btn btn-outline-primary" (click)="option2()"> 裁切元件二</button>
+  <button  type="button" class="btn btn-outline-primary" (click)="option1()"> 不限制長寬比</button>
+  <button  type="button" class="btn btn-outline-primary" (click)="option2()"> 長寬比改為4:3</button>
 </div>
