新增說明文字

--- a/src/app/cropper-one/cropper-one.component.html
+++ b/src/app/cropper-one/cropper-one.component.html
@@ -7,6 +7,9 @@
 </div>
 <div class="modal-body">
   <div class="row">
+    <span style="color: red;">1. 可自由拖拉長寬</span>
+  </div>
+  <div class="row">
     <input type="file" (change)="fileChangeEvent($event)" />
   </div>
   <div class="row">
