--- a/src/app/cropper-two/cropper-two.component.html
+++ b/src/app/cropper-two/cropper-two.component.html
@@ -7,6 +7,9 @@
 </div>
 <div class="modal-body">
   <div class="row">
+    <span style="color: red;">1. 固定長寬比例, 客戶以對角線做調整</span>
+  </div>
+  <div class="row">
     <input type="file" (change)="fileChangeEvent($event)" />
   </div>
   <div class="row">
