--- a/src/app/cropper-two/cropper-two.component.css
+++ b/src/app/cropper-two/cropper-two.component.css
@@ -1,25 +1,84 @@
-.image {
-  display: block;
-
-  /* This rule is very important, please don't ignore this */
-  max-width: 100%;
+.crop-area {
+  background: #e4e4e4;
+  height: 100%;
+  overflow: hidden;
 }
 
-.img-container {
-  max-height: 450px;
-  min-height: 200px;
-}
-
-.image {
-  display: block;
-
-  /* This rule is very important, please don't ignore this */
-  max-width: 100%;
-}
-
-.img-container,
-.img-preview {
-  background-color: #f7f7f7;
+.screenshot-box {
+  height: 516px;
   text-align: center;
-  width: 100%;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.not-allow {
+  cursor: not-allowed;
+}
+
+.delete-btn {
+  float: right;
+}
+
+@media screen and (max-width: 500px) and (min-width: 350px) {
+  image-cropper {
+    height: 450px;
+  }
+}
+
+/* iphone5、 SE */
+@media screen and (max-width: 321px) {
+  image-cropper {
+    height: 300px;
+  }
+}
+
+/* iPad 、iPad Pro */
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  image-cropper {
+    height: 500px;
+  }
+}
+
+/* iPad 、iPad Pro */
+@media screen and (max-width: 540px) and (min-width: 321px) {
+  image-cropper {
+    height: 400px;
+  }
+}
+
+/* galaxy fold */
+@media screen and (max-width: 280px) {
+  image-cropper {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  image-cropper {
+    height: 400px;
+  }
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.modal-footer {
+  border-top: 0;
+  /* margin: auto; */
+}
+
+.modal-body {
+  border-bottom: 1px solid #dee2e6;
+}
+
+.frame {
+  height: 195px; /*can be anything*/
+  position: relative;
+}
+
+img {
+  max-width: 100%;
 }
