--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <button  type="button" class="btn btn-outline-primary" (click)="option1()"> 可自由拖拉長寬</button>
-  <button  type="button" class="btn btn-outline-primary" (click)="option2()"> 固定長寬比例, 客戶以對角線做調整</button>
+  <button  type="button" class="btn btn-outline-primary" (click)="option1()"> 選擇A</button>
+  <button  type="button" class="btn btn-outline-primary" (click)="option2()"> 選擇B</button>
 </div>
